terminada aula de javascript

--- a/javascript/aula14/estilo.css
+++ b/javascript/aula14/estilo.css
@@ -1,4 +1,5 @@
 body {
+    text-align: center;
     font: normal 15pt Arial;
     background-color: rgb(144, 173, 252);
     justify-content: center;
